@@ -26,6 +26,7 @@ Here is a list of topics:
 - @ref page_dialog
 - @ref plugin_citylife
 - @ref type_index
+- @ref page_i18n
 - @ref TYPE_BUILDER
 - @ref TYPE_MATERIAL
 - @ref PU_xxx
