@@ -1,4 +1,5 @@
 # English and Default messages
+LN|English
 0|Current time is: %02ld:%02ld:%02ld.
 1|[fixed]Path               Pl PlM IM   TO Dif Reset
 2|Path               Pl PlM IM   TO Dif Reset
